prevent some content overflow

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -48,7 +48,7 @@
     justify-items: center;
     justify-content: center;
     align-content: center;
-    width: 100%;
+    width: 90%;
     gap: 8px;
 
     background-color: lighten($background-color, 50%);
@@ -181,10 +181,14 @@
 
 .home-placeholder {
     text-align: center;
+    height: 40vh;
 
     .tagline {
+        display: flex;
         font-size: 30px;
-        margin-top: 20px;
+        align-items: center;
+        justify-content: center;
+        height: 50%;
         color: #FFE5B4;
     }
 
@@ -192,7 +196,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    height: 50%;
         h2 {
             margin: 0px;
         }
